[package]
name = "flappyspace"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy_embedded_assets = "0.8.0"
fastrand = "2.0.1"
image = "0.24.7"
winit = "0.28.7"

[dependencies.bevy]
version = "0.11.3"
# Only uncomment this for debug compilations
# features = ["dynamic_linking"]
# Add this if you use Wayland, else it won't compile
# features = ["wayland"]

# Enable a small amount of optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable high optimisations for dependencies (incl. Bevy),
# but not the code
[profile.dev.package."*"]
opt-level = 3
