[package]
name = "flappyspace"
version = "1.1.0"
edition = "2021"
description = "A small game about a little UFO dodging asteroids built in Bevy"
readme = "README.md"
repository = "https://github.com/hiimsergey/flappyspace"
license = "GPL-3.0"
keywords = ["games", "bevy", "flappybird"]
categories = ["games"]

[dependencies]
bevy_embedded_assets = "0.8.0"
fastrand = "2.0.1"
image = "0.24.7"
winit = "0.28.7"

[dependencies.bevy]
version = "0.11.3"
# Add this if you use Wayland, else it won't compile
# features = ["wayland"]
